libs/@local/hashql/hir/tests/ui/reify/dict.jsonc
//@ run: fail
//@ description: dict literals are unsupported in the current version
{ "#dict": { "a": { "#literal": 2 } } }
//~^ ERROR `dict literal` not supported yet
